[package]
name = "deployer"
version = "0.1.0"
authors = ["AlexandruCalinica <calinicaalexandru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
